# common/models/ChapterChild.php
@@ -29,7 +29,7 @@ class ChapterChild extends \yii\db\ActiveRecord
     {
         return [
             [['chapter_id', 'sort'], 'integer'],
-            [['desc', 'guide', 'guide_bg_url'], 'string'],
+            [['desc', 'guide', 'guide_bg_url', 'guide_type'], 'string'],
             [['created_at', 'updated_at'], 'safe'],
             [['name'], 'string', 'max' => 32],
         ];
@@ -48,6 +48,7 @@ class ChapterChild extends \yii\db\ActiveRecord
             'sort' => 'Sort',
             'guide' => 'Guide',
             'guide_bg_url' => 'guide_bg_url',
+            'guide_type' => 'guide_type',
             'created_at' => 'Created At',
             'updated_at' => 'Updated At',
         ];
@@ -66,6 +67,7 @@ class ChapterChild extends \yii\db\ActiveRecord
                     'sort',
                     'guide',
                     'guide_bg_url',
+                    'guide_type',
                     'status',
                     'questions',
                 ];
@@ -80,6 +82,7 @@ class ChapterChild extends \yii\db\ActiveRecord
                     'sort',
                     'guide',
                     'guide_bg_url',
+                    'guide_type',
                     'status'
                 ];
             }
@@ -92,6 +95,7 @@ class ChapterChild extends \yii\db\ActiveRecord
                 'sort',
                 'guide',
                 'guide_bg_url',
+                'guide_type',
                 'questions',
                 'clearanceChapterChild'
             ];
